--- a/game.html
+++ b/game.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Gomoku</title>
+		<title>LAG</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	</head>
-	<link rel="stylesheet" type="text/css" href="css/gomoku.css">
+	<link rel="stylesheet" type="text/css" href="css/game.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<body style="text-align:left;" onload="init_graph();">
 		<div class="container">
