--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Gomoku</title>
+		<title>LAG</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	</head>
-	<link rel="stylesheet" type="text/css" href="css/gomoku.css">
+	<link rel="stylesheet" type="text/css" href="css/game.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<body style="text-align:left;" style="height:100%">
 		<div class="container" style="height:100%">
 			<div class="row" style="font-family:ambrosia;font-size:30px;margin:20px;">
-				<!--<img width="20px;" src="images/delete.png" style="margin-right:3px;"><img width="20px;" src="images/round.png" style="margin-right:3px;"><img width="23px;" src="images/plain.png" style="margin-right:3px;">-->
 				<span style="color:black;">L</span><span style="color:black;">A</span><span style="color:black;">G</span>
 			</div>
 			<div class="row" style="height:100%">
@@ -18,56 +17,22 @@
 						<div id="menu" class="menu">
 							<div class="col-sm-6 text-right" style="margin-right:-9px;">
 								<a href="game.html" onclick="saveData(1);">
-									<img src="images/morpion.png" width="60%">
-									<!--<table class="smallMenu">
-										<tr><td class="red2"></td><td></td><td></td></tr>
-										<tr><td></td><td class="red2"></td><td></td></tr>
-										<tr><td></td><td></td><td class="red2"></td></tr>
-									</table>-->
-									<!--<p> Tic Tac Toe</p>-->
+									<img src="images/morpion.png" width="55%">
 								</a>
 							</div>
 							<div class="col-sm-6 text-left" style="margin-left:-9px;">
 								<a href="game.html" onclick="saveData(3);">
-									<img src="images/gomoku_log.png" width="60%">
-									<!--<table class="verySmallMenu">
-										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-										<tr></td><td></td><td></td><td class="blue"></td><td class="blue"></td><td class="blue"></td><td class="blue"></td><td class="blue"></tr>
-										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-									</table>
-									<span>Gomoku</span>-->
+									<img src="images/gomoku_log.png" width="55%">
 								</a>
 							</div>
 							<div class="col-sm-6 text-right" style="margin-right:-9px;">
 								<a href="game.html" onclick="saveData(2);">
-									<img src="images/connect4_log.png" width="60%">
-									<!--
-									<table class="verySmallMenu">
-										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td></td><td></td><td class="yellow"></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td></td><td class="yellow"></td><td></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td class="yellow"></td><td></td><td></td><td></td><td></td><td></td></tr>
-										<tr><td class="yellow"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-									</table>
-									<span>Connect 4</span>-->
+									<img src="images/connect4_log.png" width="55%">
 								</a>
 							</div>
 							<div class="col-sm-6 text-left" style="margin-left:-9px;">
 								<a href="game.html" onclick="saveData(4);">
-									<img src="images/yourown_log.png" width="60%">
-
-									<!--<table class="mediumSmallMenu">
-										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
-										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
-									</table>
-									<span>Your Own Grid</span>-->
+									<img src="images/yourown_log.png" width="55%">
 								</a>
 							</div>
 							<div class="col-sm-2"></div>
